@@ -1,0 +1,10 @@
+oqs-provider provides an Open Quantum Safe provider for OpenSSL (3.x) to
+enable quantum-safe cryptography (QSC).
+
+Currently this provider fully enables quantum-safe cryptography for KEM
+key establishment in TLS1.3 including management of such keys via the
+OpenSSL (3.0) provider interface and hybrid KEM schemes. Also, QSC
+signatures including CMS and CMP functionality are available via the
+OpenSSL EVP interface. Key persistence is provided via the encode/decode
+mechanism, X.509 data structures, and PKCS#12 for bundling a private key
+with its corresponding X.509 certificate.
