@@ -1,0 +1,5 @@
+$NetBSD: distinfo,v 1.1 2024/09/13 18:07:51 jschauma Exp $
+
+BLAKE2s (oqs-provider-0.6.1.tar.gz) = fa55566d99c730d07246d323ad5ae7a589164dc6b5abd573c97e50062cb92beb
+SHA512 (oqs-provider-0.6.1.tar.gz) = 4c431b20fedf6680e04a4f57d3dedad76ca606f51ddbf6e3bd90e516c65b6d20df60142f3fa68a6a0f73d5d2be7f27d82ae6929a3b73b522acfbfaef9420815a
+Size (oqs-provider-0.6.1.tar.gz) = 201436 bytes
