@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.5616 2024/09/13 18:04:46 pin Exp $
+$NetBSD: CHANGES-2024,v 1.5617 2024/09/13 18:07:51 jschauma Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -8641,3 +8641,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Updated sysutils/macchina to 6.2.1 [pin 2024-09-13]
 	Added security/liboqs version 0.10.1 [jschauma 2024-09-13]
 	Updated math/four-bar-rs to 7.0.2 [pin 2024-09-13]
+	Added security/oqs-provider version 0.6.1 [jschauma 2024-09-13]
